# text-summarizer-api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
tests/: test_read_main.py
textsummarizer/: app.py  hello.py  pyproject.toml  setup.py
