[project]
name = "textsummarizer"
version = "0.1.0"
description = "an api that summarizes long texts contained in files"
authors = [
    {name = "comercialshirodev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uv (>=0.8.0,<0.9.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
